# fvttmv

./: .gitignore  CHANGELOG.md  License.md  README.md  build_for_windows.cmd  fvttmv.conf  install_on_ubuntu.py  main.py  requirements.txt  setup.cfg  setup.py
fvttmv/: exceptions.py  path_tools.py  reference_tools.py  run_config.py  wolds_finder.py
fvttmv/iterators/: directory_walker.py
fvttmv/move/: directory_mover.py  file_mover.py  mover_pre_checker.py  override_confirm.py
fvttmv/search/: references_searcher.py  references_searcher_file.py  references_searcher_string.py
fvttmv/update/: references_updater.py  references_updater_file.py  references_updater_string.py
scripts/: build_all.cmd  build_for_ubuntu.sh  build_for_windows.cmd  build_python_package.cmd  build_readme.py  install_on_ubuntu.py
src/: help_text.py  main.py
src/cli_wrapper/: __args.py  __configurator.py  __constants.py  __help_provider.py  __help_texts.py  __setup.py  __ubuntu_setup.py  main.py
src/fvttmv/: __checks.py  __init__.py  config.py  path_tools.py  program_config.py  reference_tools.py  wolds_finder.py
src/fvttmv_wrapper/: __help_texts.py  main.py
test/: common.py  test_path_tools.py
test/iterators/: test_directory_walker.py
test/mover/: test_mover.py  test_mover_exceptions.py  test_mover_no_move.py
test/search/: test_references_searcher_db_files.py
test/update/: test_references_updater.py  test_references_updater_file.py  test_references_updater_string.py
tests/test/: common.py  test_config.py  test_path_tools.py  test_program_config.py  test_worlds_finder.py
(+46 files in other folders)
