[metadata]
name = fvttmv-watermelonwolverine
version = 0.2.1
author = watermelonwolverine
author_email = 29666253+watermelonwolverine@users.noreply.github.com
description = Moves files while also updating FoundryVTT databases
url = https://github.com/watermelonwolverine/fvttmv
project_urls =
    Bug Tracker = https://github.com/watermelonwolverine/fvttmv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src